[B]4.1.8[/B]
- fixed: changed UK to United Kingdom due to IMDb changes for country certification

[B]4.1.7[/B]
- fixed: non-existing tmdb poster languages

[B]4.1.6[/B]
- added: Language preference to fanart.tv posters

[B]4.1.5[/B]
- harmonized OMDB API key settings with Leia

[B]4.1.3[/B]
- fixed: Some issues re Rotten Tomatoes ratings

[B]4.1.2[/B]
- fixed: USA Title won't be scraped correctly under some circumstances, plot outline quirks, IMDB Posters

[B]4.1.1[/B]
- changed: more cleanup and fixes

[B]4.1.0[/B]
- changed: major code clean-up of tmdb common scraper library

[B]4.0.1[/B]
- fixed: tmdb uniqueids fix

[B]4.0.0[/B]
- updated: multiple ratings and uniqueids
- changed: premiered date scraping

[B]2.8.11[/B]
- changed: split zh-cn and zh-tw

[B]2.8.8[/B
- changed: added option to enter OMDB API KEY if only using RT consensus without the scores

[B]2.8.7[/B]
- fixed: Rotten Tomato ratings are back via omdbapi.com; users will need to obtain individual API key on omdbapi.com and add it in settings
- added: Keep Original title option for TMDB (thanks to AMoo-Miki)
- fixed: search language in TMDB searches (thanks to AMoo-Miki)

[B]2.8.6[/B]
- fixed: search results might miss movies (thanks to scudlee)

[B]2.8.4[/B]
- cleanup: no longer working sources/ options

[B]2.8.3[/B]
- fixed: copy-paste issue in previous fix

[B]2.8.2[/B]
- fixed: broken TMDB search results due to API changes

[B]2.8.1[/B]
- added: pt-br and sr languages on user request

[B]2.8.0[/B]
- Update

[B]2.7.2[/B]
- Update author name

[B]2.7.1[/B]
- fixed: Keep Original Title for foreign movies

[B]2.7.0[/B]
- fixed: Rotten Tomato info won't scrape
- fixed: IMDb TOP250 won't scrape

[B]2.6.7[/B]
- fixed: broken TMDB search results due to API changes for real

[B]2.6.6[/B]
- fixed: broken TMDB search results due to API changes

[B]2.6.5[/B]
- removed: trakttv

[B]2.6.4[/B]
- removed: option to scrape trailers from hd-trailers.net (it was broken)