@@ -68,6 +68,9 @@
 				<RegExp input="$$1" output="&lt;entity&gt;&lt;title&gt;\2&lt;/title&gt;&lt;id&gt;\1&lt;/id&gt;&lt;url cache=&quot;tmdb-$INFO[tmdbsearchlanguage]-\1.json&quot;&gt;http://api.tmdb.org/3/movie/\1?api_key=92db8778ccb39d825150332b0a46061d&amp;amp;language=$INFO[tmdbsearchlanguage]&lt;/url&gt;&lt;/entity&gt;" dest="5+">
 					<expression repeat="yes">&quot;id&quot;:([0-9]*).*?title&quot;:&quot;([^&quot;]*)&quot;.*?original_title&quot;:&quot;[^&quot;]*&quot;.*?&quot;release_date&quot;:null</expression>
 				</RegExp>
+				<RegExp input="$$1" output="&lt;entity&gt;&lt;title&gt;\2&lt;/title&gt;&lt;id&gt;\1&lt;/id&gt;&lt;url cache=&quot;tmdb-$INFO[tmdbsearchlanguage]-\1.json&quot;&gt;http://api.tmdb.org/3/movie/\1?api_key=92db8778ccb39d825150332b0a46061d&amp;amp;language=$INFO[tmdbsearchlanguage]&lt;/url&gt;&lt;/entity&gt;" dest="5+">
+					<expression repeat="yes">&quot;id&quot;:([0-9]*).*?title&quot;:&quot;([^&quot;]*)&quot;.*?original_title&quot;:&quot;[^&quot;]*&quot;.*?&quot;release_date&quot;:&quot;&quot;</expression>
+				</RegExp>
 					<expression noclean="1" />
 				</RegExp>
 			<expression>themoviedb.org</expression>
