@@ -1,3 +1,6 @@
+[B]4.1.9[/B]
+- fixed: won't find TMDb title without year under some circumstances
+
 [B]4.1.8[/B]
 - fixed: changed UK to United Kingdom due to IMDb changes for country certification
 
